# rocket_auth

./: Cargo.toml  README.md
examples/: database.db  postgres.rs  redis.rs  sqlite.rs
examples/templates/: deleted.html.tera  logout.html.tera
src/: cookies.rs  error.rs  lib.rs  main.rs  prelude.rs
src/db/: mod.rs
src/db/postgres/: mod.rs
src/db/sqlite/: mod.rs
src/forms/: mod.rs
src/session/: mod.rs
src/session/default/: mod.rs
src/session/redis/: mod.rs
src/user/: auth.rs  mod.rs  user.rs  user_impl.rs  users.rs
