[package]
name = "rocket_auth"
version = "0.5.0"
license = "MIT"
edition = "2018"
readme = "README.md"
authors = ["tvallotton@uc.cl", "knarkzel"]
repository = "https://github.com/knarkzel/rocket_auth"
description = "A high level sqlite authentication management library for Rocket applications."

[dependencies]
rand = "0.8"
regex = "1"
fehler = "1"
chashmap = "2"
thiserror = "1"
futures = "0.3"
rusqlite = "0.25"
async-trait = "0.1"
rust-argon2 = "0.8"
lazy_static = "1.4"
serde_json = "1.0.66"

[dependencies.serde]
version = "1.0.127"
features = ["derive"]

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["secrets"]

[dependencies.tokio]
version = "1.9.0"
features = ["rt", "rt-multi-thread"]
